--- a/blog/Target-Identification-with-PISA-MS/index.qmd
+++ b/blog/Target-Identification-with-PISA-MS/index.qmd
@@ -13,6 +13,8 @@ page-layout: article
 image: Thermal_Shift.png
 ---
 
+## Target Identification and Drug Development
+
 Since 2000, oncology drug approvals by the FDA have increased significantly, driven by the rise of **targeted therapies and novel treatment approaches**. Kinase inhibitors remain the most approved class, while immune checkpoint inhibitors, introduced in 2011, have rapidly become the second most approved category.
 
 ![Trends in Oncology Therapeutic Approvals. Data adapted from Nature Reviews Drug Discovery (2023, PMID: 37344568).](Combined_approvals_plot.png){width=500}
@@ -31,6 +33,8 @@ In TPP, cells or lysates are exposed to a temperature gradient in the presence o
 
 These methods provide unbiased, proteome-wide insights into drug–protein interactions under near-physiological conditions, without requiring chemical modification of compounds. TPP and PISA are valuable tools for target validation, mechanism-of-action studies, and off-target identification. By revealing functional proteoform responses, they support biomarker discovery and contribute to more precise, effective cancer therapies aligned with individual patient biology.
 
+## How to make a PISA
 
 
-![[volcanoPISA](link)](volcanoPISA.png){width=100}
+
+![[volcanoPISA](link)](volcanoPISA.png){fig-align="left" width=100}
