Baizhen update test

--- a/about/index.qmd
+++ b/about/index.qmd
@@ -17,7 +17,7 @@ Postdoc at KI. Using novel chemical, thermal and quantitative proteomics technol
 
 ![[Baizhen Chen](https://www.kth.se/profile/baizhen?l=en)](baizhen.png){fig-align="left" width=200}
 
-PhD student at KTH. 
+PhD student at KTH. Multi-omics analysis/Spatial proteomics/Hormone receptor in cancer
 
 ## Our Inspiration
 
