--- a/index.qmd
+++ b/index.qmd
@@ -3,11 +3,15 @@
 format: html
 ---
 
-Welcome to **MedOmics Hub**
+<div style="text-align: center; font-size: 2em; font-weight: bold; margin-top: 20px;">
+  Welcome to <span style="color: #000000;">MedOmics Hub</span>
+</div>
 
-An interactive platform for exploring, visualizing, and analyzing multi-omic data in biomedical research.
+<p style="text-align: center; font-size: 1.2em;">
+  An interactive platform for exploring, visualizing, and analyzing multi-omic data in biomedical research.
+</p>
 
-<img src="image/MultiOmics_3.png" alt="MedOmicS" style="display: block; margin: 0 auto; max-width: 80%; height: auto;" />
+<img src="image/MultiOmics_3.png" alt="MedOmicS" style="display: block; margin: 0 auto; max-width: 100%; height: auto;" />
 
 
 
