--- a/events/events.qmd
+++ b/events/events.qmd
@@ -5,4 +5,4 @@ format: html
 
 ## 
 ### 2025 
-RaukR2025 ------------------------ 9th-19th June, 2025, Gotland,Sweden
+[RaukR2025](https://nbisweden.github.io/raukr-2025/) ___________ 9th–19th June, 2025, Gotland, Sweden
