Big Congratulations to Baizhen

--- a/events/events.qmd
+++ b/events/events.qmd
@@ -5,4 +5,12 @@ format: html
 
 ## 
 ### 2025 
-[RaukR2025](https://nbisweden.github.io/raukr-2025/) ___________ 9th–19th June, 2025, Gotland, Sweden
+
+**[RaukR2025](https://nbisweden.github.io/raukr-2025/)**<br>
+9th–19th June, 2025, Gotland, Sweden<br>
+We are enrolled in RaukR 2025 and have begun getting to know each other as we start building the MedOmics Hub together.<br><br>
+
+**Big Congratulations to Our Team Member!** 🎉 🎉 🎉<br>
+We’re excited to announce that Baizhen Chen has been accepted into the National Graduate School in Medical Bioinformatics (MedBioInfo) for a prestigious three-year training program.<br>
+We are incredibly proud of him and excited for this next step in his academic journey!
+
