--- a/blog/Transcriptional_and_Epigenetic_Landscapes_of_Cellular_Quiescence/index.qmd
+++ b/blog/Transcriptional_and_Epigenetic_Landscapes_of_Cellular_Quiescence/index.qmd
@@ -7,14 +7,6 @@ categories:
   - Genetics
   - Epigenetics
   - Data visualization
-listing: 
-  contents:
-    - "*.qmd"
-  type: default
-  fields: [title, author, categories, date, image]
-  sort: "date desc"
-  image-height: 200px
-format: 
-  html: 
-    page-layout: full
+page-layout: article
+image: Core_quiescence_genes.png
 ---
