--- a/events/events.qmd
+++ b/events/events.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Events"
 format: html
+page-layout: full
 ---
 
 ## 
@@ -8,9 +9,12 @@ format: html
 
 **[RaukR2025](https://nbisweden.github.io/raukr-2025/)**<br>
 9th–19th June, 2025, Gotland, Sweden<br>
-We are enrolled in RaukR 2025 and have begun getting to know each other as we start building the MedOmics Hub together.<br><br>
+We are enrolled in RaukR 2025 and have begun getting to know each other as we start building the MedOmics Hub together.<br> 
+![RaukR2025](ruakr.png){fig-align="left" width="700"}
+<br><br>
 
 **Big Congratulations to Our Team Member!** 🎉 🎉 🎉<br>
 We’re excited to announce that Baizhen Chen has been accepted into the National Graduate School in Medical Bioinformatics (MedBioInfo) for a prestigious three-year training program.<br>
 We are incredibly proud of him and excited for this next step in his academic journey!
+![Dinner](dinner.png){fig-align="left" width="500"}
 
